# plutus-apps

./: cabal.project
evernode/: README.md  evernode.cabal
evernode/app/: Main.hs
evernode/src/: Evernode.hs
evernode/test/: Main.hs
marconi/: marconi.cabal
marconi/src/Marconi/: Indexers.hs
marconi/src/Marconi/Index/: ScriptTx.hs
marconi/src/Marconi/Indexers/: Datum.hs  ScriptTx.hs  StakePoolDelegation.hs  UTxO.hs  Utxo.hs  Various.hs
marconi/src/Marconi/Streaming/: ChainSync.hs  Util.hs
marconi/test/: Integration.hs  RollbackRingBuffer.hs  Spec.hs  Streaming.hs
plutus-chain-index/: plutus-chain-index.cabal
plutus-chain-index-core/: plutus-chain-index-core.cabal
plutus-chain-index-core/src/Marconi/Index/: ScriptTx.hs
plutus-chain-index-core/test/: MarconiSpec.hs
plutus-chain-index/app/: Marconi.hs
