cabal-version: 3.0
name:          evernode
version:       0.1.0.0
license:       Apache-2.0
license-files: LICENSE
author:        Markus Läll
maintainer:    markus.lall@iohk.io
homepage:      https://github.com/input-output-hk/plutus-apps#readme
bug-reports:   https://github.com/input-output-hk/plutus-apps/issues
description:
  Please see the README on GitHub at <https://github.com/input-output-hk/plutus-apps#readme>

build-type:    Simple

source-repository head
  type:     git
  location: https://github.com/input-output-hk/plutus-apps

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    ScopedTypeVariables
    StandaloneDeriving

  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wmissing-import-lists
    -Wnoncanonical-monad-instances -Wredundant-constraints
    -Wunused-packages

library
  import:          lang
  hs-source-dirs:  src
  exposed-modules: Evernode

  --------------------
  -- Local components
  --------------------
  build-depends:   cardano-streaming

  --------------------------
  -- Other IOG dependencies
  --------------------------
  -- build-depends:

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base
    , optparse-applicative
    , streaming

executable evernode
  import:         lang
  hs-source-dirs: app
  main-is:        Main.hs

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , evernode

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api
    , marconi

  -- ^ use Marconi.CLI.chainPointParser

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base                  >=4.9 && <5
    , optparse-applicative

test-suite evernode-test
  import:         lang
  ghc-options:    -Wno-unused-packages
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test

  -- other-modules:

  --------------------
  -- Local components
  --------------------
  build-depends:
    , cardano-streaming
    , evernode

  --------------------------
  -- Other IOG dependencies
  --------------------------
  -- build-depends:

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base            >=4.9 && <5
    , hedgehog
    , tasty
    , tasty-hedgehog
